--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -31,39 +31,41 @@
     "build:production:android": "STAGE=production eas build --profile production --platform android"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.1.3",
-    "app": "*",
-    "dripsy": "^3.0.0",
-    "expo": "^43.0.0",
-    "expo-app-loading": "~1.2.1",
-    "expo-application": "~4.0.0",
-    "expo-constants": "^12.1.3",
-    "expo-dev-client": "~0.6.3",
-    "expo-device": "~4.0.3",
-    "expo-font": "~10.0.3",
-    "expo-haptics": "~11.0.3",
-    "expo-linking": "~2.4.2",
-    "expo-modules-core": "~0.4.4",
-    "expo-notifications": "~0.13.3",
-    "expo-splash-screen": "^0.13.4",
-    "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.64.2",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
+    "@expo/next-adapter": "^3.1.17",
+    "@gorhom/bottom-sheet": "^4.1.5",
+    "app": "^0.1.0",
+    "dripsy": "^3.6.0",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-application": "~4.0.1",
+    "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.0",
+    "expo-device": "~4.1.0",
+    "expo-font": "~10.0.4",
+    "expo-haptics": "~11.1.0",
+    "expo-linking": "~3.0.0",
+    "expo-modules-core": "~0.6.4",
+    "expo-notifications": "~0.14.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.5",
+    "next-compose-plugins": "^2.2.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.12.9",
     "@expo/next-adapter": "^3.1.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "next-compose-plugins": "^2.2.1",
-    "typescript": "^4.3.4"
+    "typescript": "~4.3.5"
   },
   "private": true,
   "version": "1.0.0",
