--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -31,8 +31,10 @@
     "build:production:android": "STAGE=production eas build --profile production --platform android"
   },
   "dependencies": {
-    "@expo/next-adapter": "^3.1.17",
     "@gorhom/bottom-sheet": "^4.1.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "app": "^0.1.0",
     "dripsy": "^3.6.0",
     "expo": "^44.0.0",
@@ -49,7 +51,6 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.5",
-    "next-compose-plugins": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -57,15 +58,19 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-shared-element": "0.8.3",
+    "react-native-web": "0.17.1",
+    "react-navigation-shared-element": "^3.1.3",
+    "react-query": "^3.34.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@expo/next-adapter": "^3.1.0",
+    "@expo/next-adapter": "3.1.17",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "next-compose-plugins": "^2.2.1",
-    "typescript": "~4.3.5"
+    "next-compose-plugins": "2.2.1",
+    "reactotron-react-native": "^5.0.1",
+    "typescript": "^4.5.5"
   },
   "private": true,
   "version": "1.0.0",
